# arkanoid

./: .clang-format  .gitignore  CMakeLists.txt  README.md  details.md  sanity_check.py
src/: Ball.cpp  Ball.h  Brick.cpp  Brick.h  Input.h  LTimer.cpp  LTimer.h  Paddle.cpp  Paddle.h  Point.cpp  Point.h  World.cpp  World.h  game.cpp  main.cpp
